<?xml version="1.0"?>
<package>
  <name>dlut_hash_icp</name>
  <version>0.0.0</version>
  <description>The dlut_hash_icp package</description>

  <author email="zhuang@dlut.edu.cn">Zhuang Yan</author>
  <author>Yan Fei</author>
  <author>Wu Nai Liang</author>

  <maintainer email="zhuang@dlut.edu.cn">Zhuang Yan</maintainer>
  <maintainer email="wunailiang@gmail.com">Wu Nai Liang</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dlut_hash_icp</url>
  <url type="repository">https://github.com/ZhuangYanDLUT/dlut_laser.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
